test/tests/operators/from_mysql/tls/error_tls_invalid_cacert.txt
error: `tls.cacert` path is not a valid file: /nonexistent/path/ca.pem
  --> tests/operators/from_mysql/tls/error_tls_invalid_cacert.tql:12:16
   |
12 |            tls={cacert: "/nonexistent/path/ca.pem"}
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
